--- a/config/database.yml.sample
+++ b/config/database.yml.sample
@@ -7,6 +7,15 @@ development:
   password:
   timeout: 5000
 
+fastdev:
+  adapter: mysql
+  database: fgrant_development
+  host: localhost
+  pool: 5
+  username: root
+  password:
+  timeout: 5000
+
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
