--- a/config/fluxx_locales/en.yml
+++ b/config/fluxx_locales/en.yml
@@ -42,3 +42,5 @@ en:
   unable_to_promote: "Unable to promote.  These error messages were found: "
   grant_failed_to_promote_with_exception: "Unable to promote this request.  These error messages were found: "
   er_grants_may_not_be_greater_than_one_year: "ER grants may not have greater than 1 year duration: '%{duration_in_months}' months was specified for this loan."
+  fip_name: "Fip"
+  
