--- a/config/fluxx_locales/en.yml
+++ b/config/fluxx_locales/en.yml
@@ -43,4 +43,7 @@ en:
   grant_failed_to_promote_with_exception: "Unable to promote this request.  These error messages were found: "
   er_grants_may_not_be_greater_than_one_year: "ER grants may not have greater than 1 year duration: '%{duration_in_months}' months was specified for this loan."
   fip_name: "Fip"
-  
+  program_name: "Program"
+  sub_program_name: "Sub Program"  
+  initiative_name: "Initiative"
+  sub_initiative_name: "Sub Initiative"
