--- a/config/sphinx.yml
+++ b/config/sphinx.yml
@@ -23,25 +23,11 @@ production:
 #  morphology: stem_en
   min_prefix_len: 3
   bin_path: '/usr/local/bin'
-  # searchd_file_path: "/home/fluxx/www/fluxx/shared/db/sphinx/production/"
-faux_casey_production:
-  port: 3315
-  mem_limit: 128M
-#  morphology: stem_en
-  min_prefix_len: 3
-  bin_path: '/usr/local/bin'
-  # searchd_file_path: "/home/fluxx/www/fluxx/shared/db/sphinx/production/"
-faux_eric_production:
-  port: 3315
-  mem_limit: 128M
-#  morphology: stem_en
-  min_prefix_len: 3
-  bin_path: '/usr/local/bin'
-  # searchd_file_path: "/home/fluxx/www/fluxx/shared/db/sphinx/production/"
+  searchd_file_path: "<%= Rails.root %>/../../shared/sphinx/<%= Rails.env %>"
 staging:
   port: 3315
   mem_limit: 128M
 #  morphology: stem_en
   min_prefix_len: 3
   bin_path: '/usr/local/bin'
-  # searchd_file_path: "/home/fluxx/www/fluxx/shared/db/sphinx/production/"
+  searchd_file_path: "<%= Rails.root %>/../../shared/sphinx/<%= Rails.env %>"
