--- a/config/fluxx_locales/en.yml
+++ b/config/fluxx_locales/en.yml
@@ -47,3 +47,5 @@ en:
   sub_program_name: "Sub Program"  
   initiative_name: "Initiative"
   sub_initiative_name: "Sub Initiative"
+  program_lead_name: "Program Lead"
+  
