--- a/config/database.yml.sample
+++ b/config/database.yml.sample
@@ -6,6 +6,8 @@ development:
   username: root
   password:
   timeout: 5000
+  encoding: utf8
+
 
 fastdev:
   adapter: mysql
@@ -15,6 +17,8 @@ fastdev:
   username: root
   password:
   timeout: 5000
+  encoding: utf8
+
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -27,6 +31,8 @@ test:
   username: root
   password:
   timeout: 5000
+  encoding: utf8
+
 
 staging:
   adapter: mysql
@@ -36,6 +42,8 @@ staging:
   username: root
   password:
   timeout: 5000
+  encoding: utf8
+
 
 production:
   adapter: mysql
@@ -45,3 +53,5 @@ production:
   username: root
   password:
   timeout: 5000
+  encoding: utf8
+
